# NDArray

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: api-reference.md  getting-started.md  initialization.md  iterators-and-views.md  memory-management.md  testing-and-ci.md
include/: NDArray.hpp
tests/: tests.cpp
